unpackaged/objects/BLND_DFTE_Expense__c.object
<CustomObject>
	<fields>
		<fullName>BLND_Account_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Account Link</label>
		<referenceTo>Account</referenceTo>
		<relationshipName>R00N30000002PYiJEAW</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Amount__c</fullName>
		<label>Amount</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>BLND_Attachment_Link__c</fullName>
		<label>Attachment Link</label>
		<length>40</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>BLND_Billable__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Billable</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Billed_Flag__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Billed Flag</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Case_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Case Link</label>
		<referenceTo>Case</referenceTo>
		<relationshipName>R00N30000002PYh2EAG</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Contact_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Contact Link</label>
		<referenceTo>Contact</referenceTo>
		<relationshipName>R00N30000002PYg0EAG</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Date__c</fullName>
		<label>Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>BLND_Description__c</fullName>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Extra_Field__c</fullName>
		<label>Extra Field</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Note__c</fullName>
		<label>Note</label>
		<length>1000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Opportunity_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Opportunity Link</label>
		<referenceTo>Opportunity</referenceTo>
		<relationshipName>R00N30000002PYgNEAW</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Project_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Project Link</label>
		<referenceTo>BLND_DFDT_Project__c</referenceTo>
		<relationshipLabel>DreamTeam Expenses</relationshipLabel>
		<relationshipName>R00N30000002PYhhEAG</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Saved</fullName>
				</value>
				<value>
					<fullName>Submitted</fullName>
				</value>
				<value>
					<fullName>Approved</fullName>
				</value>
				<value>
					<fullName>Rejected</fullName>
				</value>
				<value>
					<fullName>Paid</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_Submitted__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Submitted</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Task_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Task Link</label>
		<referenceTo>BLND_DFDT_Task__c</referenceTo>
		<relationshipLabel>DreamTeam Expenses</relationshipLabel>
		<relationshipName>R00N30000002PYgxEAG</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Type__c</fullName>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>No Expense Type</fullName>
				</value>
				<value>
					<fullName>Transportation</fullName>
				</value>
				<value>
					<fullName>Lodging</fullName>
				</value>
				<value>
					<fullName>Meals</fullName>
				</value>
				<value>
					<fullName>Equipment purchase</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_User_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User Link</label>
		<referenceTo>User</referenceTo>
		<relationshipName>R00N30000002PYj9EAG</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Version__c</fullName>
		<label>Version</label>
		<precision>4</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>DreamTeam Expense</label>
	<nameField>
		<label>Expense Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamTeam Expenses</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>